welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:15: error: too many arguments for method baisseBrosse: ()Unit
		baisseBrosse(c.Color);
                            ^