welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
def alpha() {
	var T = new Array[Color](getMondeHauteur());
	for(w<- 0 to T.length-1) {
		T(w) = getCouleurSol();
		avance();
		}
	gauche();
	avance();
	droite();
	avance();
	for(w<-0 to T.length-1) {
		var c:Color = T(w)
		baisseBrosse(c.Color);
		leveBrosse();
		avance();
	}
		

	}
			
}



